Add error on wrong lines
